--- a/gcal/todo.txt
+++ b/gcal/todo.txt
@@ -1,115 +1,113 @@
-2020-07-27 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2020-07-27
-2020-07-27 kindle #current due:2020-07-27
-2020-07-27 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2020-07-27
-2020-07-27 wifi dongle @ home #current due:2020-07-27
-2020-07-27 滋賀大★byemail #jobhunt due:2020-07-30
-2020-07-27 EAI・mobiquitous #deadlines due:2020-07-31
-2020-07-27 ElsevierJ.onlinesocialnets #deadlines due:2020-07-31
-2020-07-27 mdpi・V2Xcomm #deadlines due:2020-07-31
-2020-07-27 名古屋大.人間情報学★教授 #jobhunt due:2020-07-31
-2020-07-27 埼玉工業大.情報学 #jobhunt due:2020-07-31
-2020-07-27 岡山理科大.人工知能分野 #jobhunt due:2020-07-31
-2020-07-27 EAI.bodynets #deadlines due:2020-08-01
-2020-07-27 intconf.IEEE.MCNA.multimedia★jouhnalspecials #deadlines due:2020-08-01
-2020-07-27 (3) docomocycle data collect #regulars due:2020-08-03
-2020-07-27 EAI・urbiot@cyber #deadlines due:2020-08-03
-2020-07-27 ① money (weekly) #regulars due:2020-08-03
-2020-07-27 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2020-08-03
-2020-07-27 国土技術政策総合研究所・データ結合999.999.999千円 #fundhunt due:2020-08-05
-2020-07-27 EAI.wicon.wireless #deadlines due:2020-08-06
-2020-07-27 audio automation for open campus #midterm due:2020-08-06
-2020-07-27 kgu zemi faces #midterm due:2020-08-06
-2020-07-27 samsung redo cygwin #midterm due:2020-08-06
-2020-07-27 simplify yalms #midterm due:2020-08-06
-2020-07-27 tokyo hotels and schedule #midterm due:2020-08-06
-2020-07-27 video recognition engine (sotsuken) #midterm due:2020-08-06
-2020-07-27 hindawi・smartphoneauth #deadlines due:2020-08-07
-2020-07-27 三重大.知能工学講座・データサイエンス2jobs #jobhunt due:2020-08-12
-2020-07-27 EAI.AICON.chinoAI.commnets #deadlines due:2020-08-16
-2020-07-27 NAIST.ロボティクス分野 #jobhunt due:2020-08-17
-2020-07-27 tale.education.online #deadlines due:2020-08-17
-2020-07-27 筑波大 #jobhunt due:2020-08-17
-2020-07-27 岡山県立大.知覚情報処理 #jobhunt due:2020-08-19
-2020-07-27 近畿大.経営ビジネス学科1.電気電子工学科1.情報学科3jobs #jobhunt due:2020-08-19
-2020-07-27 inconf.ICNCC.netcomm★東京 #deadlines due:2020-08-20
-2020-07-27 玉川大学.国際教養学科 #jobhunt due:2020-08-21
-2020-07-27 龍谷大.情報工学分野 #jobhunt due:2020-08-21
-2020-07-27 龍谷大.通信工学分野 #jobhunt due:2020-08-21
-2020-07-27 近畿大.総合理工 #jobhunt due:2020-08-22
-2020-07-27 中京大.コンピュータ処理論及び関連科目 #jobhunt due:2020-08-24
-2020-07-27 久留米大.情報学フロンティア #jobhunt due:2020-08-24
-2020-07-27 大阪大学.社会イノベーション部門 #jobhunt due:2020-08-25
-2020-07-27 日本大.ロボット・制御 #jobhunt due:2020-08-25
-2020-07-27 adobe @ work, home #longterm due:2020-08-26
-2020-07-27 windows auth @ zaniya #longterm due:2020-08-26
-2020-07-27 和光大学.情報の基礎 #jobhunt due:2020-08-28
-2020-07-27 広島工業大 #jobhunt due:2020-08-28
-2020-07-27 JCN(korea).wireless.mimo #deadlines due:2020-08-30
-2020-07-27 京都大.通信情報システム #jobhunt due:2020-08-31
-2020-07-27 大阪大.情報科学 #jobhunt due:2020-08-31
-2020-07-27 岡山大学.サイバーフィジカル情報の応用研究 #jobhunt due:2020-08-31
-2020-07-27 岡山理科大.情報数理.情報工学.2posts #jobhunt due:2020-08-31
-2020-07-27 工学院大学.情報学フロンティア-情報学 #jobhunt due:2020-08-31
-2020-07-27 工学院大学.複合領域-デザイン学-総合理工-計算科学 #jobhunt due:2020-08-31
-2020-07-27 日本工業大 #jobhunt due:2020-08-31
-2020-07-27 東京都立大.情報学基礎.2posts #jobhunt due:2020-08-31
-2020-07-27 東京電機大.人間情報学 #jobhunt due:2020-08-31
-2020-07-27 株式会社Nextremer.計算科学.quantum #jobhunt due:2020-08-31
-2020-07-27 滋賀県立大.センシング工学分野 #jobhunt due:2020-08-31
-2020-07-27 立命館大学2jobs(1eng).情報理工学部.セキュリティ・ネットワークコース #jobhunt due:2020-08-31
-2020-07-27 般社団法人CRD #jobhunt due:2020-08-31
-2020-07-27 駒澤大.情報分野 #jobhunt due:2020-08-31
-2020-07-27 intconf.IEEE.NCA.netapps #deadlines due:2020-09-07
-2020-07-27 明治大 #jobhunt due:2020-09-07
-2020-07-27 法政大学.情報学・計算基盤 #jobhunt due:2020-09-07
-2020-07-27 公立はこだて未来大 #jobhunt due:2020-09-10
-2020-07-27 公立はこだて未来大.情報デザイン.複雑系知能分野 #jobhunt due:2020-09-10
-2020-07-27 ACM.nanococoa.embedsensors #deadlines due:2020-09-11
-2020-07-27 北海道.情報科学研究院 #jobhunt due:2020-09-11
-2020-07-27 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
-2020-07-27 法政大学.情報科学部コンピュータ科学科 #jobhunt due:2020-09-11
-2020-07-27 金沢大学.IoT及び情報通信分野 #jobhunt due:2020-09-11
-2020-07-27 国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター #jobhunt due:2020-09-14
-2020-07-27 東京理科大工学部情報工学科インテリジェントシステム分野 #jobhunt due:2020-09-14
-2020-07-27 琉球大学.知能情報コース-知能情報講座(知能情報学-ヒューマンコンピュータ・インタラクション #jobhunt due:2020-09-14
-2020-07-27 岡山大学.ハードウェア.ソフトウェア #jobhunt due:2020-09-15
-2020-07-27 青山学院大.情報社会科学 #jobhunt due:2020-09-15
-2020-07-27 IEEE.MSN@東京.mobility.sensing.networking #deadlines due:2020-09-17
-2020-07-27 岡山理科大 #jobhunt due:2020-09-18
-2020-07-27 熊本学園大学.計量経済学 #jobhunt due:2020-09-18
-2020-07-27 長岡技術科学大.情報・経営システム工学専攻 #jobhunt due:2020-09-18
-2020-07-27 松本大学.データサイエンス.情報学-データサイエンス #jobhunt due:2020-09-20
-2020-07-27 岩手県立大.人工知能コース #jobhunt due:2020-09-25
-2020-07-27 成蹊大学.総合理工-計算科学-数物系科学 #jobhunt due:2020-09-25
-2020-07-27 日本大学.ソフトウェア分野-情報システム分野-データサイエンス分野-知能ロボティクス分野 #jobhunt due:2020-09-25
-2020-07-27 東京大学.高性能計算地球科学分野 #jobhunt due:2020-09-25
-2020-07-27 東京理科大.数理モデリング、知能数理分野 #jobhunt due:2020-09-25
-2020-07-27 ACMtran・IoV #deadlines due:2020-09-28
-2020-07-27 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
-2020-07-27 mdpi・stenography #deadlines due:2020-09-30
-2020-07-27 兵庫県立大学.AI・IoT・ビックデータ #jobhunt due:2020-09-30
-2020-07-27 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
-2020-07-27 北海道大学.数理科学・応用数学分野 #jobhunt due:2020-09-30
-2020-07-27 成蹊大.計算科学 #jobhunt due:2020-09-30
-2020-07-27 東京都市大.情報数理 #jobhunt due:2020-09-30
-2020-07-27 東京電機大 #jobhunt due:2020-09-30
-2020-07-27 株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】 #jobhunt due:2020-09-30
-2020-07-27 福岡大.情報学 #jobhunt due:2020-09-30
-2020-07-27 静岡理工科大学.電子情報分野 #jobhunt due:2020-09-30
-2020-07-27 acm・edgeAI #deadlines due:2020-10-01
-2020-07-27 明星大.データアナリティクス #jobhunt due:2020-10-02
-2020-07-27 立命館大学.システム制御工学.無線通信・電波 #jobhunt due:2020-10-09
-2020-07-27 東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど #jobhunt due:2020-10-12
-2020-07-27 tnsm・netmng #deadlines due:2020-10-15
-2020-07-27 FIT.制御・計測に関連する分野 #jobhunt due:2020-10-16
-2020-07-27 東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究 #jobhunt due:2020-10-16
-2020-07-27 福岡工業大 #jobhunt due:2020-10-30
-2020-07-27 WileyJ.software.innovations #deadlines due:2020-10-31
-2020-07-27 springerj・cybersecAI #deadlines due:2020-10-31
-2020-07-27 mdpij.wirelessprotocols #deadlines due:2020-11-01
-2020-07-27 mdpi.5g #deadlines due:2020-11-20
-2020-07-27 IETj.smartcities #deadlines due:2020-12-01
-2020-07-27 IET・iot #deadlines due:2020-12-01
-2020-07-27 MDPI.geotech.spatiotemporal #deadlines due:2020-12-10
-2020-07-27 MDPI.SloT.sensing.IoT #deadlines due:2020-12-31
-2020-07-27 MDPI.drone.swarms #deadlines due:2020-12-31
+2020-07-28 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2020-07-28
+2020-07-28 kindle #current due:2020-07-28
+2020-07-28 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2020-07-28
+2020-07-28 wifi dongle @ home #current due:2020-07-28
+2020-07-28 滋賀大★byemail #jobhunt due:2020-07-30
+2020-07-28 EAI・mobiquitous #deadlines due:2020-07-31
+2020-07-28 ElsevierJ.onlinesocialnets #deadlines due:2020-07-31
+2020-07-28 mdpi・V2Xcomm #deadlines due:2020-07-31
+2020-07-28 名古屋大.人間情報学★教授 #jobhunt due:2020-07-31
+2020-07-28 EAI.bodynets #deadlines due:2020-08-01
+2020-07-28 intconf.IEEE.MCNA.multimedia★jouhnalspecials #deadlines due:2020-08-01
+2020-07-28 EAI・urbiot@cyber #deadlines due:2020-08-03
+2020-07-28 (3) docomocycle data collect #regulars due:2020-08-04
+2020-07-28 ① money (weekly) #regulars due:2020-08-04
+2020-07-28 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2020-08-04
+2020-07-28 国土技術政策総合研究所・データ結合999.999.999千円 #fundhunt due:2020-08-05
+2020-07-28 EAI.wicon.wireless #deadlines due:2020-08-06
+2020-07-28 audio automation for open campus #midterm due:2020-08-07
+2020-07-28 hindawi・smartphoneauth #deadlines due:2020-08-07
+2020-07-28 kgu zemi faces #midterm due:2020-08-07
+2020-07-28 samsung redo cygwin #midterm due:2020-08-07
+2020-07-28 simplify yalms #midterm due:2020-08-07
+2020-07-28 tokyo hotels and schedule #midterm due:2020-08-07
+2020-07-28 video recognition engine (sotsuken) #midterm due:2020-08-07
+2020-07-28 三重大.知能工学講座・データサイエンス2jobs #jobhunt due:2020-08-12
+2020-07-28 EAI.AICON.chinoAI.commnets #deadlines due:2020-08-16
+2020-07-28 NAIST.ロボティクス分野 #jobhunt due:2020-08-17
+2020-07-28 tale.education.online #deadlines due:2020-08-17
+2020-07-28 筑波大 #jobhunt due:2020-08-17
+2020-07-28 岡山県立大.知覚情報処理 #jobhunt due:2020-08-19
+2020-07-28 近畿大.経営ビジネス学科1.電気電子工学科1.情報学科3jobs #jobhunt due:2020-08-19
+2020-07-28 inconf.ICNCC.netcomm★東京 #deadlines due:2020-08-20
+2020-07-28 玉川大学.国際教養学科 #jobhunt due:2020-08-21
+2020-07-28 龍谷大.情報工学分野 #jobhunt due:2020-08-21
+2020-07-28 龍谷大.通信工学分野 #jobhunt due:2020-08-21
+2020-07-28 近畿大.総合理工 #jobhunt due:2020-08-22
+2020-07-28 中京大.コンピュータ処理論及び関連科目 #jobhunt due:2020-08-24
+2020-07-28 久留米大.情報学フロンティア #jobhunt due:2020-08-24
+2020-07-28 大阪大学.社会イノベーション部門 #jobhunt due:2020-08-25
+2020-07-28 日本大.ロボット・制御 #jobhunt due:2020-08-25
+2020-07-28 adobe @ work, home #longterm due:2020-08-27
+2020-07-28 windows auth @ zaniya #longterm due:2020-08-27
+2020-07-28 和光大学.情報の基礎 #jobhunt due:2020-08-28
+2020-07-28 広島工業大 #jobhunt due:2020-08-28
+2020-07-28 JCN(korea).wireless.mimo #deadlines due:2020-08-30
+2020-07-28 京都大.通信情報システム #jobhunt due:2020-08-31
+2020-07-28 大阪大.情報科学 #jobhunt due:2020-08-31
+2020-07-28 岡山大学.サイバーフィジカル情報の応用研究 #jobhunt due:2020-08-31
+2020-07-28 岡山理科大(ous).情報数理.情報工学.2posts #jobhunt due:2020-08-31
+2020-07-28 工学院大学.情報学フロンティア-情報学 #jobhunt due:2020-08-31
+2020-07-28 工学院大学.複合領域-デザイン学-総合理工-計算科学 #jobhunt due:2020-08-31
+2020-07-28 日本工業大 #jobhunt due:2020-08-31
+2020-07-28 東京都立大.情報学基礎.2posts #jobhunt due:2020-08-31
+2020-07-28 東京電機大.人間情報学 #jobhunt due:2020-08-31
+2020-07-28 株式会社Nextremer.計算科学.quantum #jobhunt due:2020-08-31
+2020-07-28 滋賀県立大.センシング工学分野 #jobhunt due:2020-08-31
+2020-07-28 立命館大学2jobs(1eng).情報理工学部.セキュリティ・ネットワークコース #jobhunt due:2020-08-31
+2020-07-28 般社団法人CRD #jobhunt due:2020-08-31
+2020-07-28 駒澤大.情報分野 #jobhunt due:2020-08-31
+2020-07-28 intconf.IEEE.NCA.netapps #deadlines due:2020-09-07
+2020-07-28 明治大 #jobhunt due:2020-09-07
+2020-07-28 法政大学.情報学・計算基盤 #jobhunt due:2020-09-07
+2020-07-28 公立はこだて未来大 #jobhunt due:2020-09-10
+2020-07-28 公立はこだて未来大.情報デザイン.複雑系知能分野 #jobhunt due:2020-09-10
+2020-07-28 ACM.nanococoa.embedsensors #deadlines due:2020-09-11
+2020-07-28 北海道.情報科学研究院 #jobhunt due:2020-09-11
+2020-07-28 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
+2020-07-28 法政大学.情報科学部コンピュータ科学科 #jobhunt due:2020-09-11
+2020-07-28 金沢大学.IoT及び情報通信分野 #jobhunt due:2020-09-11
+2020-07-28 国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター #jobhunt due:2020-09-14
+2020-07-28 東京理科大工学部情報工学科インテリジェントシステム分野 #jobhunt due:2020-09-14
+2020-07-28 琉球大学.知能情報コース-知能情報講座(知能情報学-ヒューマンコンピュータ・インタラクション #jobhunt due:2020-09-14
+2020-07-28 岡山大学.ハードウェア.ソフトウェア #jobhunt due:2020-09-15
+2020-07-28 青山学院大.情報社会科学 #jobhunt due:2020-09-15
+2020-07-28 IEEE.MSN@東京.mobility.sensing.networking #deadlines due:2020-09-17
+2020-07-28 岡山理科大 #jobhunt due:2020-09-18
+2020-07-28 熊本学園大学.計量経済学 #jobhunt due:2020-09-18
+2020-07-28 長岡技術科学大.情報・経営システム工学専攻 #jobhunt due:2020-09-18
+2020-07-28 松本大学.データサイエンス.情報学-データサイエンス #jobhunt due:2020-09-20
+2020-07-28 岩手県立大.人工知能コース #jobhunt due:2020-09-25
+2020-07-28 成蹊大学.総合理工-計算科学-数物系科学 #jobhunt due:2020-09-25
+2020-07-28 日本大学.ソフトウェア分野-情報システム分野-データサイエンス分野-知能ロボティクス分野 #jobhunt due:2020-09-25
+2020-07-28 東京大学.高性能計算地球科学分野 #jobhunt due:2020-09-25
+2020-07-28 東京理科大.数理モデリング、知能数理分野 #jobhunt due:2020-09-25
+2020-07-28 ACMtran・IoV #deadlines due:2020-09-28
+2020-07-28 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
+2020-07-28 mdpi・stenography #deadlines due:2020-09-30
+2020-07-28 兵庫県立大学.AI・IoT・ビックデータ #jobhunt due:2020-09-30
+2020-07-28 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
+2020-07-28 北海道大学.数理科学・応用数学分野 #jobhunt due:2020-09-30
+2020-07-28 成蹊大.計算科学 #jobhunt due:2020-09-30
+2020-07-28 東京都市大.情報数理 #jobhunt due:2020-09-30
+2020-07-28 東京電機大 #jobhunt due:2020-09-30
+2020-07-28 株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】 #jobhunt due:2020-09-30
+2020-07-28 福岡大.情報学 #jobhunt due:2020-09-30
+2020-07-28 静岡理工科大学.電子情報分野 #jobhunt due:2020-09-30
+2020-07-28 acm・edgeAI #deadlines due:2020-10-01
+2020-07-28 明星大.データアナリティクス #jobhunt due:2020-10-02
+2020-07-28 立命館大学.システム制御工学.無線通信・電波 #jobhunt due:2020-10-09
+2020-07-28 東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど #jobhunt due:2020-10-12
+2020-07-28 tnsm・netmng #deadlines due:2020-10-15
+2020-07-28 FIT.制御・計測に関連する分野 #jobhunt due:2020-10-16
+2020-07-28 東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究 #jobhunt due:2020-10-16
+2020-07-28 福岡工業大 #jobhunt due:2020-10-30
+2020-07-28 WileyJ.software.innovations #deadlines due:2020-10-31
+2020-07-28 springerj・cybersecAI #deadlines due:2020-10-31
+2020-07-28 mdpij.wirelessprotocols #deadlines due:2020-11-01
+2020-07-28 mdpi.5g #deadlines due:2020-11-20
+2020-07-28 IETj.smartcities #deadlines due:2020-12-01
+2020-07-28 IET・iot #deadlines due:2020-12-01
+2020-07-28 MDPI.geotech.spatiotemporal #deadlines due:2020-12-10
+2020-07-28 MDPI.SloT.sensing.IoT #deadlines due:2020-12-31
+2020-07-28 MDPI.drone.swarms #deadlines due:2020-12-31
