--- a/gcal/todo.txt
+++ b/gcal/todo.txt
@@ -1,141 +1,129 @@
-2020-08-10 滋賀大★byemail #jobhunt due:2020-07-30
-2020-08-10 ElsevierJ.onlinesocialnets #deadlines due:2020-07-31
-2020-08-10 mdpi・V2Xcomm #deadlines due:2020-07-31
-2020-08-10 名古屋大.人間情報学★教授 #jobhunt due:2020-07-31
-2020-08-10 EAI.bodynets #deadlines due:2020-08-01
-2020-08-10 intconf.IEEE.MCNA.multimedia★jouhnalspecials #deadlines due:2020-08-01
-2020-08-10 EAI・urbiot@cyber #deadlines due:2020-08-03
-2020-08-10 国土技術政策総合研究所・データ結合999.999.999千円 #fundhunt due:2020-08-05
-2020-08-10 EAI.wicon.wireless #deadlines due:2020-08-06
-2020-08-10 hindawi・smartphoneauth #deadlines due:2020-08-07
-2020-08-10 IEEE.MSN@東京 #deadlines due:2020-08-08
-2020-08-10 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2020-08-10
-2020-08-10 kindle #current due:2020-08-10
-2020-08-10 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2020-08-10
-2020-08-10 wifi dongle @ home #current due:2020-08-10
-2020-08-10 三重大.知能工学講座・データサイエンス2jobs #jobhunt due:2020-08-12
-2020-08-10 EAI・mobiquitous #deadlines due:2020-08-15
-2020-08-10 GIIS.infranets★virtual #deadlines due:2020-08-15
-2020-08-10 bigdatase★virtual #deadlines due:2020-08-15
-2020-08-10 三谷産業フェア★金沢 #fundhunt due:2020-08-15
-2020-08-10 EAI.AICON.chinoAI.commnets #deadlines due:2020-08-16
-2020-08-10 smartelectronics★jornal #deadlines due:2020-08-16
-2020-08-10 (3) docomocycle data collect #regulars due:2020-08-17
-2020-08-10 NAIST.ロボティクス分野 #jobhunt due:2020-08-17
-2020-08-10 tale.education.online #deadlines due:2020-08-17
-2020-08-10 ① money (weekly) #regulars due:2020-08-17
-2020-08-10 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2020-08-17
-2020-08-10 筑波大 #jobhunt due:2020-08-17
-2020-08-10 岡山県立大.知覚情報処理 #jobhunt due:2020-08-19
-2020-08-10 近畿大.経営ビジネス学科1.電気電子工学科1.情報学科3jobs #jobhunt due:2020-08-19
-2020-08-10 audio automation for open campus #midterm due:2020-08-20
-2020-08-10 inconf.ICNCC.netcomm★東京 #deadlines due:2020-08-20
-2020-08-10 kgu zemi faces #midterm due:2020-08-20
-2020-08-10 samsung redo cygwin #midterm due:2020-08-20
-2020-08-10 simplify yalms #midterm due:2020-08-20
-2020-08-10 tokyo hotels and schedule #midterm due:2020-08-20
-2020-08-10 video recognition engine (sotsuken) #midterm due:2020-08-20
-2020-08-10 玉川大学.国際教養学科 #jobhunt due:2020-08-21
-2020-08-10 龍谷大学・情報工学分野 #jobhunt due:2020-08-21
-2020-08-10 龍谷大学・通信工学分野 #jobhunt due:2020-08-21
-2020-08-10 近畿大.総合理工 #jobhunt due:2020-08-22
-2020-08-10 中京大.コンピュータ処理論及び関連科目 #jobhunt due:2020-08-24
-2020-08-10 久留米大.情報学フロンティア #jobhunt due:2020-08-24
-2020-08-10 大阪大学.社会イノベーション部門 #jobhunt due:2020-08-25
-2020-08-10 日本大.ロボット・制御 #jobhunt due:2020-08-25
-2020-08-10 和光大学.情報の基礎 #jobhunt due:2020-08-28
-2020-08-10 広島工業大 #jobhunt due:2020-08-28
-2020-08-10 駿河台大学・映像メディア分野 #jobhunt due:2020-08-28
-2020-08-10 JCN(korea).wireless.mimo #deadlines due:2020-08-30
-2020-08-10 京都大.通信情報システム #jobhunt due:2020-08-31
-2020-08-10 大阪大.情報科学 #jobhunt due:2020-08-31
-2020-08-10 岡山大学.サイバーフィジカル情報の応用研究 #jobhunt due:2020-08-31
-2020-08-10 岡山理科大(ous).情報数理.情報工学.2posts #jobhunt due:2020-08-31
-2020-08-10 工学院大学.情報学フロンティア-情報学 #jobhunt due:2020-08-31
-2020-08-10 工学院大学.複合領域-デザイン学-総合理工-計算科学 #jobhunt due:2020-08-31
-2020-08-10 日本工業大 #jobhunt due:2020-08-31
-2020-08-10 東京都市大学・情報学 #jobhunt due:2020-08-31
-2020-08-10 東京都市大学・経営情報システム #jobhunt due:2020-08-31
-2020-08-10 東京都立大.情報学基礎.2posts #jobhunt due:2020-08-31
-2020-08-10 東京電機大.人間情報学 #jobhunt due:2020-08-31
-2020-08-10 株式会社Nextremer.計算科学.quantum #jobhunt due:2020-08-31
-2020-08-10 滋賀県立大.センシング工学分野 #jobhunt due:2020-08-31
-2020-08-10 立命館大学2jobs(1eng).情報理工学部.セキュリティ・ネットワークコース #jobhunt due:2020-08-31
-2020-08-10 般社団法人CRD #jobhunt due:2020-08-31
-2020-08-10 駒澤大.情報分野 #jobhunt due:2020-08-31
-2020-08-10 intconf.IEEE.NCA.netapps #deadlines due:2020-09-07
-2020-08-10 明治大 #jobhunt due:2020-09-07
-2020-08-10 法政大学.情報学・計算基盤 #jobhunt due:2020-09-07
-2020-08-10 adobe @ work, home #longterm due:2020-09-09
-2020-08-10 windows auth @ zaniya #longterm due:2020-09-09
-2020-08-10 公立はこだて未来大 #jobhunt due:2020-09-10
-2020-08-10 公立はこだて未来大.情報デザイン.複雑系知能分野 #jobhunt due:2020-09-10
-2020-08-10 広島工業大学・コンピュータシステム #jobhunt due:2020-09-10
-2020-08-10 広島工業大学・情報ネットワーク #jobhunt due:2020-09-10
-2020-08-10 ACM.nanococoa.embedsensors #deadlines due:2020-09-11
-2020-08-10 北海道.情報科学研究院 #jobhunt due:2020-09-11
-2020-08-10 明治大学・統計科学・統計数学・知能情報科学 #jobhunt due:2020-09-11
-2020-08-10 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
-2020-08-10 法政大学.情報科学部コンピュータ科学科 #jobhunt due:2020-09-11
-2020-08-10 金沢大学.IoT及び情報通信分野 #jobhunt due:2020-09-11
-2020-08-10 国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター #jobhunt due:2020-09-14
-2020-08-10 東京理科大工学部情報工学科インテリジェントシステム分野 #jobhunt due:2020-09-14
-2020-08-10 琉球大学.知能情報コース-知能情報講座(知能情報学-ヒューマンコンピュータ・インタラクション #jobhunt due:2020-09-14
-2020-08-10 岡山大学.ハードウェア.ソフトウェア #jobhunt due:2020-09-15
-2020-08-10 青山学院大.情報社会科学 #jobhunt due:2020-09-15
-2020-08-10 CCIoT.smartIOT #deadlines due:2020-09-18
-2020-08-10 京都先端科学大学・統計やビジネスデータの見方 #jobhunt due:2020-09-18
-2020-08-10 岡山理科大 #jobhunt due:2020-09-18
-2020-08-10 東京電機大学・情報学部門 #jobhunt due:2020-09-18
-2020-08-10 熊本学園大学.計量経済学 #jobhunt due:2020-09-18
-2020-08-10 長岡技術科学大.情報・経営システム工学専攻 #jobhunt due:2020-09-18
-2020-08-10 松本大学.データサイエンス.情報学-データサイエンス #jobhunt due:2020-09-20
-2020-08-10 岐阜聖徳学園大学・情報学 #jobhunt due:2020-09-23
-2020-08-10 岩手県立大.人工知能コース #jobhunt due:2020-09-25
-2020-08-10 成蹊大学.総合理工-計算科学-数物系科学 #jobhunt due:2020-09-25
-2020-08-10 日本大学.ソフトウェア分野-情報システム分野-データサイエンス分野-知能ロボティクス分野 #jobhunt due:2020-09-25
-2020-08-10 東京大学.高性能計算地球科学分野 #jobhunt due:2020-09-25
-2020-08-10 東京理科大.数理モデリング、知能数理分野 #jobhunt due:2020-09-25
-2020-08-10 ACMtran・IoV #deadlines due:2020-09-28
-2020-08-10 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
-2020-08-10 mdpi・stenography #deadlines due:2020-09-30
-2020-08-10 公立はこだて未来大学・情報システム #jobhunt due:2020-09-30
-2020-08-10 兵庫県立大学.AI・IoT・ビックデータ #jobhunt due:2020-09-30
-2020-08-10 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
-2020-08-10 北海道大学.数理科学・応用数学分野 #jobhunt due:2020-09-30
-2020-08-10 名城大学・情報学、統計学、フィールド調査 #jobhunt due:2020-09-30
-2020-08-10 岡山大学・電気電子機能開発 #jobhunt due:2020-09-30
-2020-08-10 成蹊大.計算科学 #jobhunt due:2020-09-30
-2020-08-10 東京都市大.情報数理 #jobhunt due:2020-09-30
-2020-08-10 東京都市大学・情報理論 #jobhunt due:2020-09-30
-2020-08-10 東京電機大 #jobhunt due:2020-09-30
-2020-08-10 株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】 #jobhunt due:2020-09-30
-2020-08-10 熊本大学・ビッグデータ #jobhunt due:2020-09-30
-2020-08-10 福岡大.情報学 #jobhunt due:2020-09-30
-2020-08-10 静岡理工科大学.電子情報分野 #jobhunt due:2020-09-30
-2020-08-10 龍谷大学・情報科学分野 #jobhunt due:2020-09-30
-2020-08-10 acm・edgeAI #deadlines due:2020-10-01
-2020-08-10 明星大.データアナリティクス #jobhunt due:2020-10-02
-2020-08-10 BigDataJ.softcompute #deadlines due:2020-10-05
-2020-08-10 立命館大学.システム制御工学.無線通信・電波 #jobhunt due:2020-10-09
-2020-08-10 東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど #jobhunt due:2020-10-12
-2020-08-10 tnsm・netmng #deadlines due:2020-10-15
-2020-08-10 FIT.制御・計測に関連する分野 #jobhunt due:2020-10-16
-2020-08-10 愛知工科大学・組込み系システム #jobhunt due:2020-10-16
-2020-08-10 東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究 #jobhunt due:2020-10-16
-2020-08-10 福岡工業大 #jobhunt due:2020-10-30
-2020-08-10 足利大学・人工知能 #jobhunt due:2020-10-30
-2020-08-10 足利大学・情報工学、情報科学センター #jobhunt due:2020-10-30
-2020-08-10 香川大学・機械システム #jobhunt due:2020-10-30
-2020-08-10 WileyJ.software.innovations #deadlines due:2020-10-31
-2020-08-10 springerj・cybersecAI #deadlines due:2020-10-31
-2020-08-10 mdpij.wirelessprotocols #deadlines due:2020-11-01
-2020-08-10 香川大学・情報システム・セキュリティコース #jobhunt due:2020-11-13
-2020-08-10 mdpi.5g #deadlines due:2020-11-20
-2020-08-10 IETj.smartcities #deadlines due:2020-12-01
-2020-08-10 IET・iot #deadlines due:2020-12-01
-2020-08-10 MDPI.geotech.spatiotemporal #deadlines due:2020-12-10
-2020-08-10 AppliedEnergyJ・P2Penergyshare #deadlines due:2020-12-20
-2020-08-10 MDPI.SloT.sensing.IoT #deadlines due:2020-12-31
-2020-08-10 MDPI.drone.swarms #deadlines due:2020-12-31
-2020-08-10 MDPI.sustain #deadlines due:2021-01-31
+2020-08-19 滋賀大★byemail #jobhunt due:2020-07-30
+2020-08-19 ElsevierJ.onlinesocialnets #deadlines due:2020-07-31
+2020-08-19 mdpi・V2Xcomm #deadlines due:2020-07-31
+2020-08-19 EAI.bodynets #deadlines due:2020-08-01
+2020-08-19 intconf.IEEE.MCNA.multimedia★jouhnalspecials #deadlines due:2020-08-01
+2020-08-19 EAI・urbiot@cyber #deadlines due:2020-08-03
+2020-08-19 国土技術政策総合研究所・データ結合999.999.999千円 #fundhunt due:2020-08-05
+2020-08-19 EAI.wicon.wireless #deadlines due:2020-08-06
+2020-08-19 hindawi・smartphoneauth #deadlines due:2020-08-07
+2020-08-19 IEEE.MSN@東京 #deadlines due:2020-08-08
+2020-08-19 EAI・adhocnets #deadlines due:2020-08-15
+2020-08-19 EAI・mobiquitous #deadlines due:2020-08-15
+2020-08-19 GIIS.infranets★virtual #deadlines due:2020-08-15
+2020-08-19 bigdatase★virtual #deadlines due:2020-08-15
+2020-08-19 三谷産業フェア★金沢 #fundhunt due:2020-08-15
+2020-08-19 EAI.AICON.chinoAI.commnets #deadlines due:2020-08-16
+2020-08-19 smartelectronics★jornal #deadlines due:2020-08-16
+2020-08-19 tale.education.online #deadlines due:2020-08-17
+2020-08-19 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2020-08-19
+2020-08-19 kindle #current due:2020-08-19
+2020-08-19 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2020-08-19
+2020-08-19 wifi dongle @ home #current due:2020-08-19
+2020-08-19 inconf.ICNCC.netcomm★東京 #deadlines due:2020-08-20
+2020-08-19 ●玉川大学.国際教養学科 #jobhunt due:2020-08-21
+2020-08-19 龍谷大学・通信工学分野 #jobhunt due:2020-08-21
+2020-08-19 IEEE・CloudNets #deadlines due:2020-08-24
+2020-08-19 中京大.コンピュータ処理論及び関連科目 #jobhunt due:2020-08-24
+2020-08-19 大阪大学.社会イノベーション部門 #jobhunt due:2020-08-25
+2020-08-19 (3) docomocycle data collect #regulars due:2020-08-26
+2020-08-19 ① money (weekly) #regulars due:2020-08-26
+2020-08-19 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2020-08-26
+2020-08-19 ●広島工業大・経営情報システム #jobhunt due:2020-08-28
+2020-08-19 和光大学.情報の基礎 #jobhunt due:2020-08-28
+2020-08-19 audio automation for open campus #midterm due:2020-08-29
+2020-08-19 kgu zemi faces #midterm due:2020-08-29
+2020-08-19 samsung redo cygwin #midterm due:2020-08-29
+2020-08-19 simplify yalms #midterm due:2020-08-29
+2020-08-19 tokyo hotels and schedule #midterm due:2020-08-29
+2020-08-19 video recognition engine (sotsuken) #midterm due:2020-08-29
+2020-08-19 JCN(korea).wireless.mimo #deadlines due:2020-08-30
+2020-08-19 ●大阪大.情報科学 #jobhunt due:2020-08-31
+2020-08-19 ●駒澤大.情報分野 #jobhunt due:2020-08-31
+2020-08-19 岡山大学.サイバーフィジカル情報の応用研究 #jobhunt due:2020-08-31
+2020-08-19 岡山理科大(ous).情報数理.情報工学.2posts #jobhunt due:2020-08-31
+2020-08-19 工学院大学.情報学フロンティア-情報学 #jobhunt due:2020-08-31
+2020-08-19 工学院大学.複合領域-デザイン学-総合理工-計算科学 #jobhunt due:2020-08-31
+2020-08-19 東京都市大学・情報学 #jobhunt due:2020-08-31
+2020-08-19 東京都市大学・経営情報システム #jobhunt due:2020-08-31
+2020-08-19 東京都立大.情報学基礎.2posts #jobhunt due:2020-08-31
+2020-08-19 滋賀県立大.センシング工学分野 #jobhunt due:2020-08-31
+2020-08-19 立命館大学2jobs(1eng).情報理工学部.セキュリティ・ネットワークコース #jobhunt due:2020-08-31
+2020-08-19 mdpi・distwnets #deadlines due:2020-09-01
+2020-08-19 intconf.IEEE.NCA.netapps #deadlines due:2020-09-07
+2020-08-19 明治大 #jobhunt due:2020-09-07
+2020-08-19 法政大学.情報学・計算基盤 #jobhunt due:2020-09-07
+2020-08-19 公立はこだて未来大 #jobhunt due:2020-09-10
+2020-08-19 公立はこだて未来大.情報デザイン.複雑系知能分野 #jobhunt due:2020-09-10
+2020-08-19 広島工業大学・コンピュータシステム #jobhunt due:2020-09-10
+2020-08-19 広島工業大学・情報ネットワーク #jobhunt due:2020-09-10
+2020-08-19 ACM.nanococoa.embedsensors #deadlines due:2020-09-11
+2020-08-19 北海道.情報科学研究院 #jobhunt due:2020-09-11
+2020-08-19 明治大学・統計科学・統計数学・知能情報科学 #jobhunt due:2020-09-11
+2020-08-19 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
+2020-08-19 法政大学.情報科学部コンピュータ科学科 #jobhunt due:2020-09-11
+2020-08-19 金沢大学.IoT及び情報通信分野 #jobhunt due:2020-09-11
+2020-08-19 国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター #jobhunt due:2020-09-14
+2020-08-19 東京理科大工学部情報工学科インテリジェントシステム分野 #jobhunt due:2020-09-14
+2020-08-19 琉球大学.知能情報コース-知能情報講座(知能情報学-ヒューマンコンピュータ・インタラクション #jobhunt due:2020-09-14
+2020-08-19 岡山大学.ハードウェア.ソフトウェア #jobhunt due:2020-09-15
+2020-08-19 青山学院大.情報社会科学 #jobhunt due:2020-09-15
+2020-08-19 CCIoT.smartIOT #deadlines due:2020-09-18
+2020-08-19 adobe @ work, home #longterm due:2020-09-18
+2020-08-19 windows auth @ zaniya #longterm due:2020-09-18
+2020-08-19 京都先端科学大学・統計やビジネスデータの見方 #jobhunt due:2020-09-18
+2020-08-19 岡山理科大 #jobhunt due:2020-09-18
+2020-08-19 東京電機大学・情報学部門 #jobhunt due:2020-09-18
+2020-08-19 熊本学園大学.計量経済学 #jobhunt due:2020-09-18
+2020-08-19 長岡技術科学大.情報・経営システム工学専攻 #jobhunt due:2020-09-18
+2020-08-19 松本大学.データサイエンス.情報学-データサイエンス #jobhunt due:2020-09-20
+2020-08-19 岐阜聖徳学園大学・情報学 #jobhunt due:2020-09-23
+2020-08-19 岩手県立大.人工知能コース #jobhunt due:2020-09-25
+2020-08-19 成蹊大学.総合理工-計算科学-数物系科学 #jobhunt due:2020-09-25
+2020-08-19 日本大学.ソフトウェア分野-情報システム分野-データサイエンス分野-知能ロボティクス分野 #jobhunt due:2020-09-25
+2020-08-19 東京大学.高性能計算地球科学分野 #jobhunt due:2020-09-25
+2020-08-19 東京理科大.数理モデリング、知能数理分野 #jobhunt due:2020-09-25
+2020-08-19 ACMtran・IoV #deadlines due:2020-09-28
+2020-08-19 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
+2020-08-19 mdpi・stenography #deadlines due:2020-09-30
+2020-08-19 公立はこだて未来大学・情報システム #jobhunt due:2020-09-30
+2020-08-19 兵庫県立大学.AI・IoT・ビックデータ #jobhunt due:2020-09-30
+2020-08-19 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
+2020-08-19 北海道大学.数理科学・応用数学分野 #jobhunt due:2020-09-30
+2020-08-19 名城大学・情報学、統計学、フィールド調査 #jobhunt due:2020-09-30
+2020-08-19 岡山大学・電気電子機能開発 #jobhunt due:2020-09-30
+2020-08-19 成蹊大.計算科学 #jobhunt due:2020-09-30
+2020-08-19 東京都市大.情報数理 #jobhunt due:2020-09-30
+2020-08-19 東京都市大学・情報理論 #jobhunt due:2020-09-30
+2020-08-19 東京電機大 #jobhunt due:2020-09-30
+2020-08-19 株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】 #jobhunt due:2020-09-30
+2020-08-19 熊本大学・ビッグデータ #jobhunt due:2020-09-30
+2020-08-19 福岡大.情報学 #jobhunt due:2020-09-30
+2020-08-19 静岡理工科大学.電子情報分野 #jobhunt due:2020-09-30
+2020-08-19 龍谷大学・情報科学分野 #jobhunt due:2020-09-30
+2020-08-19 acm・edgeAI #deadlines due:2020-10-01
+2020-08-19 mdpi・wsensornets #deadlines due:2020-10-01
+2020-08-19 明星大.データアナリティクス #jobhunt due:2020-10-02
+2020-08-19 BigDataJ.softcompute #deadlines due:2020-10-05
+2020-08-19 立命館大学.システム制御工学.無線通信・電波 #jobhunt due:2020-10-09
+2020-08-19 東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど #jobhunt due:2020-10-12
+2020-08-19 tnsm・netmng #deadlines due:2020-10-15
+2020-08-19 FIT.制御・計測に関連する分野 #jobhunt due:2020-10-16
+2020-08-19 愛知工科大学・組込み系システム #jobhunt due:2020-10-16
+2020-08-19 東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究 #jobhunt due:2020-10-16
+2020-08-19 福岡工業大 #jobhunt due:2020-10-30
+2020-08-19 足利大学・人工知能 #jobhunt due:2020-10-30
+2020-08-19 足利大学・情報工学、情報科学センター #jobhunt due:2020-10-30
+2020-08-19 香川大学・機械システム #jobhunt due:2020-10-30
+2020-08-19 WileyJ.software.innovations #deadlines due:2020-10-31
+2020-08-19 springerj・cybersecAI #deadlines due:2020-10-31
+2020-08-19 mdpij.wirelessprotocols #deadlines due:2020-11-01
+2020-08-19 香川大学・情報システム・セキュリティコース #jobhunt due:2020-11-13
+2020-08-19 mdpi.5g #deadlines due:2020-11-20
+2020-08-19 IETj.smartcities #deadlines due:2020-12-01
+2020-08-19 IET・iot #deadlines due:2020-12-01
+2020-08-19 MDPI.geotech.spatiotemporal #deadlines due:2020-12-10
+2020-08-19 AppliedEnergyJ・P2Penergyshare #deadlines due:2020-12-20
+2020-08-19 MDPI.SloT.sensing.IoT #deadlines due:2020-12-31
+2020-08-19 MDPI.drone.swarms #deadlines due:2020-12-31
+2020-08-19 MDPI.sustain #deadlines due:2021-01-31
